# Search-for-the-occurrences-of-the-template-string-in-the-text

./: README.md  Сравнительные графики.ipynb
Data_files/: long_4_text.csv  long_4_text_with_symbol.csv  long_bin_text.csv  long_bin_text_with_symbol.csv  short_4_text.csv  short_4_text_with_symbol.csv  short_bin_text.csv  short_bin_text_with_symbol.csv
Searching_template_in_text/: CMakeLists.txt  main.cpp
Searching_template_in_text/algorithms/: CharByCharAlgorithm.cpp  KMP.cpp  KMPRefinedFaces.cpp  RabinKarp.cpp
Searching_template_in_text/architecture/: Pattern.cpp
Searching_template_in_text/files/: long_4_text.csv  long_4_text_with_symbol.csv  long_bin_text.csv  long_bin_text_with_symbol.csv  short_4_text.csv  short_4_text_with_symbol.csv  short_bin_text.csv  short_bin_text_with_symbol.csv
Searching_template_in_text/functions/: BustingPatterns.cpp  Generation.cpp
